syntax = "proto3";

package place;
option go_package = "pb";

message Place{
  int64 count = 1;
  int64 id = 2;
  string n = 3;
  string pinyinFull = 4;
  string pinyinShort = 5;
}

message HotCitiesByCinemaReq{}

message HotCitiesByCinemaRep{
  repeated Place p = 1;
}

service PlaceServiceExt{
  // 获取所有电影院的地点
  rpc HotCitiesByCinema(HotCitiesByCinemaReq) returns (HotCitiesByCinemaRep);
}